@@ -1,4 +1,4 @@
 aimbat
 ======
 
-AIMBAT: Automated and Interactive Measurement of Body wave Arrival Times
+AIMBAT: Automated and Interactive Measurement of Body-wave Arrival Times
