@@ -6,18 +6,18 @@ Copyright
 GNU General Public License, Version 3 (GPLv3) 
 http://www.gnu.org/licenses/gpl.html
 
-Copyright (c) 2012 Xiaoting Lou
+Copyright (c) 2009-2012 Xiaoting Lou
 
 
 Overview
 --------
-AIMBAT (Automated and Interactive Measurement of Body wave Arrival Times) 
+AIMBAT (Automated and Interactive Measurement of Body-wave Arrival Times) 
 is an open-source software package for efficiently measuring teleseismic 
-body wave arrival times for large seismic arrays (Lou et al., 2012). It is 
-based on a widely used method called MCCC (Multi-Channel Cross-Correlation) 
+body wave arrival times for large seismic arrays (Lou et al., 2013). It is 
+based on a widely used method called MCCC (multi-channel cross-correlation) 
 developed by VanDecar and Crosson (1990). The package is automated in the 
 sense of initially aligning seismograms for MCCC which is achieved by an 
-ICCS (Iterative Cross Correlation and Stack) algorithm. Meanwhile, a 
+ICCS (iterative cross-correlation and stack) algorithm. Meanwhile, a 
 graphical user interface is built to perform seismogram quality control 
 interactively. Therefore, user processing time is reduced while valuable 
 input from a user's expertise is retained. As a byproduct, SAC (Goldstein 
@@ -25,7 +25,7 @@ et al., 2003) plotting and phase picking functionalities are replicated
 and enhanced.
 
 For more informaton visit 
-http://lunar.earth.northwestern.edu/~xlou/aimbat.html
+http://www.earth.northwestern.edu/~xlou/aimbat.html
 https://github.com/pysmo/aimbat
 
 Dependencies
