@@ -1,13 +1,13 @@
 #!/usr/bin/env python
 """ 
-AIMBAT: Automated and Interactive Measurement of Body wave Arrival Times.
+AIMBAT: Automated and Interactive Measurement of Body-wave Arrival Times.
 
 AIMBAT is an open-source software package for efficiently measuring teleseismic 
-body wave arrival times for large seismic arrays (Lou et al., 2012). It is 
-based on a widely used method called MCCC (Multi-Channel Cross-Correlation) 
+body wave arrival times for large seismic arrays (Lou et al., 2013). It is 
+based on a widely used method called MCCC (multi-channel cross-correlation) 
 developed by VanDecar and Crosson (1990). The package is automated in the 
 sense of initially aligning seismograms for MCCC which is achieved by an 
-ICCS (Iterative Cross Correlation and Stack) algorithm. Meanwhile, a 
+ICCS (iterative cross-correlation and stack) algorithm. Meanwhile, a 
 graphical user interface is built to perform seismogram quality control 
 interactively. Therefore, user processing time is reduced while valuable 
 input from a user\'s expertise is retained. As a byproduct, SAC (Goldstein 
@@ -27,7 +27,7 @@ setup(name='pysmo.aimbat',
 	author_email='xlou@u.northwestern.edu',
 	package_dir={'pysmo.aimbat': 'src/pysmo/aimbat', 'pysmo':'src/pysmo'},
 	packages=['pysmo.aimbat', 'pysmo'],
-	url='http://lunar.earth.northwestern.edu/~xlou/aimbat.html',
+	url='http://www.earth.northwestern.edu/~xlou/aimbat.html',
 	ext_package='pysmo.aimbat',
 	ext_modules=[Extension('xcorrf90', ['src/pysmo/aimbat/xcorr.f90'])],
 	package_data={'pysmo.aimbat': ['ttdefaults.conf', 'Readme.txt', 'Version.txt', 'License.txt', 'Changelog.txt']},
