@@ -11,3 +11,8 @@ Python usage: import aimbat --> from pysmo import aimbat
 * Minor changes in help messages for scripts using the OptionParser module.
 * Adjust figsize-related function of ttpick.py to support backends other than Tk.
 
+aimbat-0.1.2
+============
+* Change sci format for scientific notation of sacp2: from 1e-5 to 10^{-5}
+* Change font properties for station label to "monospace" for equal width
+* Minor changes in program descriptions, example scripts 
